--- a/MyApplication2/app/src/main/AndroidManifest.xml
+++ b/MyApplication2/app/src/main/AndroidManifest.xml
@@ -5,22 +5,34 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="CLIENT"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+
         <activity
+            android:label="LOGIN"
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" >
+
+        <activity
+            android:label="MENU"
+            android:name=".Main2Activity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
+        <activity
+            android:label="CONFIMR_ORDER"
+            android:name=".Main22Activity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
