--- a/DistributedOrderingSystem/app/src/main/AndroidManifest.xml
+++ b/DistributedOrderingSystem/app/src/main/AndroidManifest.xml
@@ -36,6 +36,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.darosale.distributedorderingsystem.TableLayout" />
         </activity>
+        <activity
+            android:name=".Queue"
+            android:label="@string/title_activity_queue"
+            android:parentActivityName=".TableLayout"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.darosale.distributedorderingsystem.TableLayout" />
+        </activity>
     </application>
 
 </manifest>
