--- a/MyApplication2/app/src/main/AndroidManifest.xml
+++ b/MyApplication2/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <activity
-            android:label="CONFIMR_ORDER"
+            android:label="CONFIRM_ORDER"
             android:name=".Main22Activity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
