IT FN WORKS!!!!!! Off to bed!

--- a/MyApplication2/app/src/main/AndroidManifest.xml
+++ b/MyApplication2/app/src/main/AndroidManifest.xml
@@ -30,10 +30,11 @@
 
         <activity
             android:label="MENU"
-            android:name=".Main22Activity">
+            android:name=".Main22Activity"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main22Activity"
+                android:value=".Main2Activity"
                 />
         </activity>
 
